# ai-aggregation

./: .gitignore  .prettierignore  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/lib/: aiWindows.ts  hotkey.ts  inject.ts  store.ts
src/main/: MainApp.tsx
src/quick/: QuickPanel.tsx
